// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`User Service 正常系 getUser は指定されたIDのユーザーを返す 1`] = `
{
  "email": "test1@test.com",
  "id": 1,
  "name": "Alice",
}
`;

exports[`User Service 正常系 getUsers はユーザー一覧を返す 1`] = `
[
  {
    "email": "test1@test.com",
    "id": 1,
    "name": "Alice",
  },
  {
    "email": "test2@test.com",
    "id": 2,
    "name": "Bob",
  },
]
`;

exports[`User Service 正常系 updateUser は指定されたIDのユーザーを更新して返す 1`] = `
{
  "email": "test@test.com",
  "id": 1,
  "name": "Alice Updated",
}
`;
